# playing-with-grpc

./: Cargo.toml  README.md  build.rs
proto/: hello-world.proto
src/: client.rs  lib.rs  server.rs
